<resources>
    <string name="app_name">Sistema de Turnos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings_login">Configuracion</string>
    <string name="action_settings_logOut">Salir</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="subtitle">Sistema de Turnos</string>
    <string name="title">SMARTTURNO</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="sign_in">Ingresar</string>
    <string name="forget_password">¿Olvido su password?</string>
    <string name="register">¿No tiene cuenta?\n Registrese aqui</string>

    <string name="dialog_setting_title">Configuración backend</string>
    <string name="production">http://lagranjadelsaberyaprender.co/api/</string>
    <string name="centos_laravel">http://192.168.1.142:8000/api/</string>
    <string name="centos_apache">http://192.168.1.142/api/</string>
    <string name="other">otro</string>


</resources>
