<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:background="@color/colorBackground"
>
    <RelativeLayout
            android:id="@+id/logo"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">
        <ImageView
                android:id="@+id/image_view_logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="75dp"
                android:layout_centerHorizontal="true"
                android:background="@mipmap/ic_turnera"

        />
        <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_below="@+id/image_view_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/subtitle"
                android:textAppearance="@style/TextAppearance.AppCompat"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/title"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    app:fontFamily="sans-serif-light"
                    android:textStyle="bold"
                    android:typeface="monospace"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30dp"
                />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/cardview_light_background"
            android:elevation="2dp"
            android:padding="18dp"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintStart_toStartOf="parent"
    >

        <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:drawablePadding="16dp"
                android:background="@drawable/edit_text_round_background"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:layout_marginTop="2dp"

        />

        <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:drawablePadding="16dp"
                android:background="@drawable/edit_text_round_background"
                android:inputType="textPassword"
                android:padding="12dp"
                android:layout_marginTop="4dp"

        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:text="@string/forget_password"
        />
        <Button

                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:layout_gravity="center_horizontal"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:backgroundTint="@color/colorAccent"

        />

    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="16dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"
            android:text="@string/register"
            app:layout_constraintTop_toBottomOf="@+id/login_form"
            app:layout_constraintStart_toStartOf="parent"

    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    >
        <ProgressBar
                android:id="@+id/progress_bar"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
        />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>