<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:padding="18dp"

>


    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf= "parent"
           >
        <RadioButton
                android:id="@+id/laravel_centos"
                android:text="@string/production"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
        />
        <RadioButton
                android:id="@+id/apache_centos"
                android:text="@string/centos_laravel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />
        <RadioButton
                android:id="@+id/produccion"
                android:text="@string/centos_apache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />

        <RadioButton
                android:id="@+id/other"
                android:text="otro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Ingrese direccion de backend"
                android:enabled="false"
                android:drawableLeft="@drawable/ic_device_hub_black_24dp"
                android:drawablePadding="16dp"
                android:drawableTint="@color/apptheme_color"

        />


    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>